k3s/generated_manifests/metallb/Namespace-metallb.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: metallb
