k3s/generated_manifests/metallb/DaemonSet-metallb-frr-k8s.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: frr-k8s
    app.kubernetes.io/component: frr-k8s
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frr-k8s
    app.kubernetes.io/version: v0.0.25
    helm.sh/chart: frr-k8s-0.0.25
  name: metallb-frr-k8s
  namespace: metallb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frr-k8s
      app.kubernetes.io/instance: metallb
      app.kubernetes.io/name: frr-k8s
  template:
    metadata:
      labels:
        app: frr-k8s
        app.kubernetes.io/component: frr-k8s
        app.kubernetes.io/instance: metallb
        app.kubernetes.io/name: frr-k8s
    spec:
      containers:
        - args:
            - --node-name=$(NODE_NAME)
            - --namespace=$(NAMESPACE)
            - --metrics-bind-address=0.0.0.0:9140
            - --log-level=info
          command:
            - /frr-k8s
          image: quay.io/metallb/frr-k8s:v0.0.25
          livenessProbe:
            failureThreshold: 3
            httpGet:
              host: 127.0.0.1
              path: /healthz
              port: 7572
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: controller
          ports:
            - containerPort: 9140
              name: metricshttps
          readinessProbe:
            failureThreshold: 3
            httpGet:
              host: 127.0.0.1
              path: /readyz
              port: 7572
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_RAW
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /etc/frr_reloader
              name: reloader
        - command:
            - /bin/sh
            - -c
            - /sbin/tini -- /usr/lib/frr/docker-start
          image: quay.io/frrouting/frr:10.4.3
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: 9141
              scheme: HTTPS
            periodSeconds: 10
          name: frr
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_ADMIN
                - NET_BIND_SERVICE
            readOnlyRootFilesystem: true
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /livez
              port: 9141
              scheme: HTTPS
            periodSeconds: 5
          volumeMounts:
            - mountPath: /var/run/frr
              name: frr-sockets
            - mountPath: /etc/frr
              name: frr-conf
            - mountPath: /var/lib/frr
              name: frr-lib
            - mountPath: /var/tmp/frr
              name: frr-tmp
        - command:
            - /etc/frr_reloader/frr-reloader.sh
          image: quay.io/frrouting/frr:10.4.3
          name: reloader
          volumeMounts:
            - mountPath: /var/run/frr
              name: frr-sockets
            - mountPath: /etc/frr
              name: frr-conf
            - mountPath: /etc/frr_reloader
              name: reloader
        - args:
            - --metrics-port=9141
            - --metrics-bind-address=0.0.0.0
          command:
            - /etc/frr_metrics/frr-metrics
          image: quay.io/frrouting/frr:10.4.3
          name: frr-metrics
          ports:
            - containerPort: 9141
              name: frrmetricshttps
          volumeMounts:
            - mountPath: /var/run/frr
              name: frr-sockets
            - mountPath: /etc/frr
              name: frr-conf
            - mountPath: /etc/frr_metrics
              name: metrics
        - args:
            - --node-name=$(NODE_NAME)
            - --namespace=$(NAMESPACE)
            - --pod-name=$(POD_NAME)
            - --log-level=info
            - --poll-interval=2m
          command:
            - /etc/frr_status/frr-status
          image: quay.io/frrouting/frr:10.4.3
          name: frr-status
          volumeMounts:
            - mountPath: /var/run/frr
              name: frr-sockets
            - mountPath: /etc/frr
              name: frr-conf
            - mountPath: /etc/frr_status
              name: frr-status
      hostNetwork: true
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: metallb-frr-k8s-controller
      shareProcessNamespace: true
      terminationGracePeriodSeconds: 0
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
      volumes:
        - emptyDir: {}
          name: frr-sockets
        - configMap:
            name: metallb-frr-k8s-frr-startup
          name: frr-startup
        - emptyDir: {}
          name: frr-conf
        - emptyDir: {}
          name: reloader
        - emptyDir: {}
          name: metrics
        - emptyDir: {}
          name: frr-status
        - emptyDir: {}
          name: frr-lib
        - emptyDir: {}
          name: frr-tmp
  updateStrategy:
    type: RollingUpdate
