k3s/generated_manifests/metallb/Deployment-metallb-frr-k8s-statuscleaner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frr-k8s
    app.kubernetes.io/component: statuscleaner
    app.kubernetes.io/instance: metallb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: frr-k8s
    app.kubernetes.io/version: v0.0.25
    helm.sh/chart: frr-k8s-0.0.25
  name: metallb-frr-k8s-statuscleaner
  namespace: metallb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: statuscleaner
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: frr-k8s-statuscleaner
      labels:
        app.kubernetes.io/component: statuscleaner
    spec:
      containers:
        - args:
            - --webhook-port=19443
            - --log-level=info
            - --namespace=$(NAMESPACE)
          command:
            - /statuscleaner
          image: quay.io/metallb/frr-k8s:v0.0.25
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: webhook
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
          name: frr-k8s-statuscleaner
          ports:
            - containerPort: 19443
              name: webhook
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: webhook
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      hostNetwork: true
      serviceAccountName: metallb-frr-k8s-controller
      terminationGracePeriodSeconds: 10
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: frr-k8s-webhook-server-cert
