k3s/generated_manifests/metallb/Service-frr-k8s-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frr-k8s-webhook-service
  namespace: metallb
spec:
  ports:
    - port: 443
      targetPort: webhook
  selector:
    app.kubernetes.io/component: statuscleaner
