k3s/generated_manifests/metallb/ValidatingWebhookConfiguration-frr-k8s-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: frr-k8s-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: frr-k8s-webhook-service
        namespace: metallb
        path: /validate-frrk8s-metallb-io-v1beta1-frrconfiguration
    failurePolicy: Fail
    name: frrconfigurationsvalidationwebhook.metallb.io
    rules:
      - apiGroups:
          - frrk8s.metallb.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - frrconfigurations
    sideEffects: None
